# far-west-legacy

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  NOTES.md  pyproject.toml  render.yaml  repo-memory.md  requirements.txt
docs/: data_schema.md
prompts/: obituary_extract.md
scripts/: begin.ps1  begin.sh  close.ps1  close.sh
src/: app.py  cli.py  extract.py  fetch.py  version.py
templates/: base.html  confirmed.html  home.html  index.html  review.html
tests/: test_extract.py  test_fetch.py  test_placeholder.py
tests/fixtures/: url_fetch_failures.md
