[project]
name = "far-west-legacy"
version = "0.1.0"
description = "AI-assisted obituary preservation tool for the FamilySearch Family Tree"
license = {text = "MIT"}
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.black]
target-version = ["py312"]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
